<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_recycle_view"
    tools:context=".RecycleViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test_text_input"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:textSize="25sp"
        android:text="@string/text"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_goneMarginTop="20dp"
        android:inputType="text"
        android:hint="@string/type_something"
        android:id="@+id/edit_text_user_input"/>

    <Button
        android:onClick="changeTextButton"
        android:id="@+id/change_text_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/change_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>