<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_goneMarginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_launch_dialog"
        android:id="@+id/button_launch_dialog"
        android:layout_below="@+id/text_name"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/go_to_recycle_view_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_launch_dialog"
        android:layout_alignStart="@+id/button_launch_dialog"
        android:text="@string/recycle_view_activity"
        android:layout_gravity="center_horizontal"/>

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:columnWidth="100dp"
        android:drawSelectorOnTop="true"
        android:focusable="true"
        android:gravity="center"
        android:numColumns="2"
        android:layout_below="@+id/go_to_recycle_view_activity"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />

</RelativeLayout>